Eclipse 4.18 (RC1) JDT Patch for Groovy-Eclipse: JDT commit 92d33b4
#1161 #1162